style sheet change to prevent orientation change on mobile (#64)

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ h1 {
 .ribbon::after {
   position: absolute;
   z-index: -1;
-  content: '';
+  content: "";
   display: block;
   border: 5px solid #2980b9;
 }
@@ -177,7 +177,7 @@ h1 {
   background-color: #3498db;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   color: #fff;
-  font: 700 16px/1 'Lato', sans-serif;
+  font: 700 16px/1 "Lato", sans-serif;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
   text-align: center;
@@ -204,4 +204,16 @@ h1 {
   right: -25px;
   top: 30px;
   transform: rotate(-45deg);
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
 }
